--- a/minv/inventory/templates/inventory/collection/alignment.html
+++ b/minv/inventory/templates/inventory/collection/alignment.html
@@ -6,6 +6,57 @@
 <script src="{% static 'inventory/js/ol.js' %}"></script>
 <link rel="stylesheet" href="{% static 'inventory/css/ol.css' %}">
 {{ block.super }}
+<style>
+
+table {
+  table-layout: fixed;
+}
+.rotated-table-inside {
+  padding-right: 130px
+}
+
+.table-header-rotated {
+  border-collapse: collapse;
+}
+/*.table-header-rotated td {
+  width: 30px;
+}*/
+.table-header-rotated td {
+  /*text-align: center;*/
+  /*padding: 10px 5px;*/
+  /*border: 1px solid #ccc;*/
+}
+.table-header-rotated th.rotate {
+  height: 250px;
+  white-space: nowrap;
+  padding: 8px;
+}
+.table-header-rotated th.rotate > div {
+  /*-webkit-transform: translate(25px, 51px) rotate(315deg);*/
+          transform: translate(22px, 0px) rotate(300deg);
+  width: 30px;
+}
+.table-header-rotated th.rotate > div > span {
+  width: 220px;
+  border-bottom: 1px solid #ddd;
+  padding: 5px 10px;
+}
+.table-header-rotated th.row-header {
+  /*padding: 0 10px;*/
+  /*border-bottom: 1px solid #ccc;*/
+}
+
+.table-header-rotated thead th {
+  border: none !important;
+}
+
+td {
+  border-left: 1px solid #ddd;
+  border-top: 1px solid #ddd;
+  border-right: 1px solid #ddd;
+  text-align: center;
+}
+</style>
 {% endblock %}
 
 
@@ -48,35 +99,42 @@
       {% if not results %}
         No missalignments were detected.
       {% else %}
-        <p>Search hit {{ results.paginator.count }} results, showing {{ results|length }}.</p>
-        {% for record in results %}
-          {{ record }}
-        {% endfor %}
-        <nav>
-          <ul class="pagination">
-            {% if results.number > 2 %}
-              <li>
-                <a href="#" data-page="1" aria-label="Previous">
-                  <span aria-hidden="true">&laquo;</span>
-                </a>
-              </li>
-            {% endif %}
-            {% if results.has_previous %}
-              <li><a href="#" data-page="{{ results.previous_page_number }}">{{ results.previous_page_number }}</a></li>
-            {% endif %}
-            <li class="active"><a href="#">{{ results.number }}<span class="sr-only">(current)</span></a></li>
-            {% if results.has_next %}
-              <li><a href="#" data-page="{{ results.next_page_number }}">{{ results.next_page_number }}</a></li>
-            {% endif %}
-            {% if results.has_next and results.next_page_number < results.paginator.num_pages %}
-            <li>
-              <a href="#" data-page="{{ results.paginator.num_pages }}" aria-label="Next">
-                <span aria-hidden="true">&raquo;</span>
-              </a>
-            </li>
-            {% endif %}
-          </ul>
-        </nav>
+        <div class="rotated-table-inside">
+          <table class="table table-striped table-condensed table-header-rotated">
+           <colgroup>
+              <col style="width: auto;">
+            {% for location in results.keys %}
+              <col style="width: 50px">
+            {% endfor %}
+          </colgroup>
+            <thead>
+              <tr>
+                <th></th>
+              {% for location in results.keys %}
+                <th class="rotate"><div><span>{{ location }}</span></div></th>
+              {% endfor %}
+              </tr>
+            </thead>
+            <tbody>
+            {% for record, missalignments in results.iter_missalignments %}
+              <tr>
+                <th>{{ record }}</th>
+              {% for m in missalignments %}
+                <!-- <td>{% if m %}{{ m.annotations.all.count }}{% endif %}
+                </td> -->
+                <td>
+                  {% if m %}
+                    <span class="glyphicon glyphicon-ok text-success" aria-hidden="true"></span>
+                  {% else %}
+                    <span class="glyphicon glyphicon-remove text-danger" aria-hidden="true"></span>
+                  {% endif %}
+                </td>
+              {% endfor %}
+              </tr>
+            {% endfor %}
+            </tbody>
+          </table>
+        </div>
       {% endif %}
     </div>
   </div>
