--- a/minv/inventory/templates/inventory/base.html
+++ b/minv/inventory/templates/inventory/base.html
@@ -41,7 +41,7 @@
             {% endfor %}
           </ul>
         </li>
-        <li {% if current == "monitor" %}class="active"{% endif %}><a href="{% url 'inventory:task-list' %}">Monitor</a></li>
+        <li {% if current == "monitor" %}class="active"{% endif %}><a href="{% url 'inventory:monitor:job-list' %}">Monitor</a></li>
         <li {% if current == "backup" %}class="active"{% endif %}><a href="{% url 'inventory:backup' %}">Backup</a></li>
         <li {% if current == "restore" %}class="active"{% endif %}><a href="{% url 'inventory:restore' %}">Restore</a></li>
         <li><a href="{% url 'admin:index' %}">Admin</a></li>
