Fixing wrong view name

--- a/minv/inventory/templates/inventory/root.html
+++ b/minv/inventory/templates/inventory/root.html
@@ -7,7 +7,7 @@
 
 <ul>
   <li><a href="{% url 'inventory:collection:list' %}">Collection List</a></li>
-  <li><a href="{% url 'inventory:task-list' %}">Monitor</a></li>
+  <li><a href="{% url 'inventory:monitor:job-list' %}">Monitor</a></li>
   <li><a href="{% url 'inventory:backup' %}">Backup</a></li>
   <li><a href="{% url 'inventory:restore' %}">Restore</a></li>
   <li><a href="{% url 'admin:index' %}">Admin</a></li>
