--- a/minv/inventory/templates/inventory/collection/search.html
+++ b/minv/inventory/templates/inventory/collection/search.html
@@ -5,6 +5,7 @@
 {% block head %}
 <script src="{% static 'inventory/js/ol.js' %}"></script>
 <link rel="stylesheet" href="{% static 'inventory/css/ol.css' %}">
+<link rel="stylesheet" href="{% static 'inventory/css/alignment.css' %}"/>
 {{ block.super }}
 {% endblock %}
 
@@ -18,19 +19,26 @@
 {% block collection_content %}
 
 <ul class="nav nav-tabs" role="tablist">
-  <li role="presentation" class="{% if records == None %}active{% endif %}">
+  <li role="presentation" class="{% if results == None %}active{% endif %}">
     <a href="#parameters" aria-controls="home" role="tab" data-toggle="tab">Parameters</a>
   </li>
-  <li role="presentation" class="{% if records == None %}disabled{% else %}active{% endif %}">
-    <a href="#results" aria-controls="profile" role="tab" {% if not records == None %}data-toggle="tab"{% endif %}>Results</a>
+  <li role="presentation" class="{% if results == None %}disabled{% elif result_list_location == None %}active{% endif %}">
+    <a href="#results" aria-controls="profile" role="tab" {% if not results == None %}data-toggle="tab"{% endif %}>Results</a>
   </li>
+  {% if result_list_location %}
+  <li role="presentation" class="active">
+    <a href="#result_list" aria-controls="profile" role="tab" data-toggle="tab">Result List: {{ result_list_location }}</a>
+  </li>
+  {% endif %}
 </ul>
 
 <form action="{% url 'inventory:collection:search' mission=collection.mission file_type=collection.file_type %}" method="post" class="form-horizontal">
   {% csrf_token %}
 
+  {{ result_list_form }}
+
   <div class="tab-content">
-    <div role="tabpanel" class="tab-pane {% if records == None %}active{% endif %}" id="parameters">
+    <div role="tabpanel" class="tab-pane {% if results == None and result_list_location == None %}active{% endif %}" id="parameters">
       <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
           <button type="submit" class="btn btn-default">Search</button>
@@ -44,39 +52,56 @@
         </div>
       </div>
     </div>
-    <div role="tabpanel" class="tab-pane {% if not records == None %}active{% endif %}" id="results">
-    {% if not records %}
+
+    <div role="tabpanel" class="tab-pane {% if result_list_location == None and results %}active{% endif %}" id="results">
+    {% if not results %}
       The search returned no results.
     {% else %}
-      <p>Search hit {{ records.paginator.count }} records, showing {{ records|length }}.</p>
-      {% for record in records %}
-        {{ record }}
-      {% endfor %}
-      <nav>
-        <ul class="pagination">
-          {% if records.number > 2 %}
-            <li>
-              <a href="#" data-page="1" aria-label="Previous">
-                <span aria-hidden="true">&laquo;</span>
-              </a>
-            </li>
-          {% endif %}
-          {% if records.has_previous %}
-            <li><a href="#" data-page="{{ records.previous_page_number }}">{{ records.previous_page_number }}</a></li>
-          {% endif %}
-          <li class="active"><a href="#">{{ records.number }}<span class="sr-only">(current)</span></a></li>
-          {% if records.has_next %}
-            <li><a href="#" data-page="{{ records.next_page_number }}">{{ records.next_page_number }}</a></li>
-          {% endif %}
-          {% if records.has_next and records.next_page_number < records.paginator.num_pages %}
-          <li>
-            <a href="#" data-page="{{ records.paginator.num_pages }}" aria-label="Next">
-              <span aria-hidden="true">&raquo;</span>
-            </a>
-          </li>
-          {% endif %}
-        </ul>
-      </nav>
+      <table class="table table-striped table-condensed table-hover table-header-rotated">
+        <thead>
+          <tr>
+            <th>Location</th>
+            <th>Count</th>
+            <th>Volume (Bytes)</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+        {% for location, values in results %}
+          <tr>
+            <th>
+              {{ location }}
+            </th>
+            <td>{{ values.count }}</td>
+            <td>{{ values.volume | sizeof_fmt }} <small>({{ values.volume }} Bytes)</small></td>
+            <td><button type="submit" class="btn btn-default" name="result_list_location" value="{{ location.id }}">Show Result List</button></td>
+          </tr>
+        {% endfor %}
+        </tbody>
+      </table>
+    {% endif %}
+    </div>
+    <div role="tabpanel" class="tab-pane {% if result_list_location %}active{% endif %}" id="result_list">
+    {% if not result_list %}
+      The search returned no results.
+    {% else %}
+      <table class="table table-striped table-condensed table-hover table-header-rotated">
+        <thead>
+          <tr>
+            <th>Filename</th>
+          </tr>
+        </thead>
+        <tbody>
+        {% for record in result_list %}
+          <tr>
+            <th>
+              {{ record }}
+            </th>
+          </tr>
+        {% endfor %}
+        </tbody>
+      </table>
+      {% render_pagination result_list %}
     {% endif %}
     </div>
   </div>
